@@ -10799,6 +10799,74 @@ gretl_matrix *gretl_matrix_bool_sel (const gretl_matrix *A,
 }
 
 /**
+ * gretl_matrix_columns:
+ * @A: source matrix.
+ * @sel: selection vector.
+ * @err: location to receive error code.
+ *
+ * Produces a matrix which contains zero or more of the
+ * columns of @A, selected and ordered according to the
+ * indices in @sel; the columns of @A may thus be reordered
+ * (and/or repeated). Note that since this function relates
+ * to a "genr" function in userspace, the columns indicated
+ * in @sel should be 1-based.
+ *
+ * Returns: the generated matrix, or %NULL on failure.
+ */
+
+gretl_matrix *gretl_matrix_columns (const gretl_matrix *A, 
+				    const gretl_matrix *sel, 
+				    int *err)
+{
+    int n = gretl_vector_get_length(sel);
+    gretl_matrix *C = NULL;
+
+    if (n == 0) {
+	if (sel->rows > 0 && sel->cols > 0) {
+	    *err = E_NONCONF;
+	} else {
+	    C = gretl_null_matrix_new();
+	    if (C == NULL) {
+		*err = E_ALLOC;
+	    }
+	}
+    } else if (gretl_is_null_matrix(A)) {
+	*err = E_DATA;
+    } else {
+	double x;
+	int m = A->rows;
+	int i, j, k;
+
+	for (i=0; i<n; i++) {
+	    k = sel->val[i];
+	    if (k < 1 || k > A->cols) {
+		*err = E_DATA;
+		break;
+	    }
+	}
+
+	if (!*err) {
+	    C = gretl_matrix_alloc(m, n);
+	    if (C == NULL) {
+		*err = E_ALLOC;
+	    }
+	}
+
+	if (!*err) {	
+	    for (i=0; i<n; i++) {
+		k = sel->val[i] - 1;
+		for (j=0; j<m; j++) {
+		    x = gretl_matrix_get(A, j, k);
+		    gretl_matrix_set(C, j, i, x);
+		}
+	    }
+	}
+    }
+
+    return C;
+}
+
+/**
  * gretl_matrix_sort_by_column:
  * @m: matrix.
  * @k: column by which to sort.
