@@ -652,6 +652,10 @@ gretl_matrix *gretl_matrix_bool_sel(const gretl_matrix *A,
 				    const gretl_matrix *sel, 
 				    int rowsel, int *err);
 
+gretl_matrix *gretl_matrix_columns (const gretl_matrix *A, 
+				    const gretl_matrix *sel, 
+				    int *err);
+
 gretl_matrix *gretl_matrix_sort_by_column (const gretl_matrix *m, 
 					   int k, int *err);
 
